# DualOscSynth

./: CMakeLists.txt  NewProject.jucer  README.md  install.txt
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleOscillator.cpp  SimpleOscillator.h
